@@ -1,0 +1,3 @@
+class Task < ActiveRecord::Base
+  has_states :initial => :dummy
+end
